--- a/LDASummarizer.ipynb
+++ b/LDASummarizer.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This notebook contains our LDA approach to find topics in Terms of Services \"text\", build a dictionary and then group the text under those topics. We used this approach to cluster ToS into group of text related to copyright, privacy and termination."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
@@ -741,21 +748,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
